2006-12-05  Kevin Ryde  <user42@zip.com.au>

	* numbers.c (scm_product): For flonum*inum and complex*inum, return
	exact 0 if inum==0.  Already done for inum*flonum and inum*complex,
	and as per R5RS section "Exactness".

2006-11-17  Neil Jerram  <neil@ossau.uklinux.net>

	Integration of patch from Daniel Ridge to allow strings in 1.6.x
	to have length up to 2^32 - 1, instead of 2^24 - 1 as currently.
	All changes are subject to #ifdef GUILE_EXPERIMENTAL_BIG_STRINGS;
	GUILE_EXPERIMENTAL_BIG_STRINGS is _not_ defined by default, and we
	have no intention of changing this within the official 1.6.x
	series.  The only reason for integrating this is as a convenience
	for the contributor, as and when we make further 1.6.x releases.
	
	* strings.h: If GUILE_EXPERIMENTAL_BIG_STRINGS is defined, use
	different definitions for SCM_STRING_MAX_LENGTH, SCM_STRING_LENGTH
	and SCM_SET_STRING_LENGTH, and add new convenience macro
	SCM_SET_SUBSTRING_LENGTH.

	* strings.c (scm_makstr, scm_take_str, scm_allocate_string,
	scm_make_shared_substring): Allocate a double cell for a string,
	if GUILE_EXPERIMENTAL_BIG_STRINGS is defined.

2006-10-03  Kevin Ryde  <user42@zip.com.au>

	* eval.c (SCM_APPLY): For scm_tc7_subr_2o, throw wrong-num-args on 0
	arguments or 3 or more arguments.  Previously 0 called proc with
	SCM_UNDEFINED, and 3 or more silently used just the first 2.

2006-07-24  Kevin Ryde  <user42@zip.com.au>

	* socket.c (scm_num2uint32): New function.
	(scm_htonl, scm_ntohl): Use it to enforce 32-bit range check on
	systems with 64-bit long.

2006-07-18  Rob Browning  <rlb@defaultvalue.org>

	* continuations.c: Add __attribute__ ((returns_twice)) to the
	ia64_getcontext prototype so that gcc will make the right
	arrangements and avoid an illegal instruction during
	call-with-current-continuation.

2006-07-06  Kevin Ryde  <user42@zip.com.au>

	* stime.c (bdtime2c): tm_gmtoff is seconds East, so take negative of
	tm:gmtoff which is seconds West.  Reported by Aaron VanDevender.